--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,96 +1,126 @@
 <!--INICIO DO CONTEUDO-->
 <section class="content-header">
-  </section>
+</section>
 
-  <section class="content">
-    <section class="invoice">
+<section class="content">
+  <section class="invoice">
 
-        {{form.valid}}
-        {{form.value | json}}
+    <!-- {{form.valid}}
+    {{form.value | json}} -->
 
-          <form #form="ngForm" novalidate>
-            <div class="row">
-              <div class="col-xs-12">
-                <h2 class="page-header">
-                  <i class="fa fa-shopping-cart"></i> Finalize o seu pedido
-                </h2>
-              </div>
-            </div>                
+    <form [formGroup]="orderForm" novalidate>
+      <div class="row">
+        <div class="col-xs-12">
+          <h2 class="page-header">
+            <i class="fa fa-shopping-cart"></i> Finalize o seu pedido
+          </h2>
+        </div>
+      </div>
 
-            <div class="row invoice-info">
-              <div class="col-xs-12">
-                <p class="lead">Endereço de Entrega:</p>
-              </div>
-              <div class="col-sm-6 col-xs-12">
-                <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Endereço">
-                  <input name="address" class="form-control" ngModel required minlength="5" autocomplete="off" ngModel placeholder="Endereço">
+      <div class="row">
+        <div class="col-xs-12 col-sm-9">
+          <p class="lead">Dados Pessoas:</p>
+
+        </div>
+
+        <div class="col-xs-12 col-sm-3">
+            <span class="help-block pull-right has-error-block" *ngIf="orderForm.hasError('emailsNotMatch')">
+                <i class="fa fa-remove"></i>E-mails não conferem</span>
+
+        </div>
+        <div class="col-sm-6 col-xs-12">
+            <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Nome">
+              <input class="form-control" formControlName="name" placeholder="Nome" autocomplete="off">
+            </mt-input-container>
+          </div>
+          <div class="col-sm-3 col-xs-6">
+              <mt-input-container errorMessage="E-mail invalido" label="E-mail">
+                <input type="text" class="form-control" formControlName="email"  placeholder="E-mail" 
+                   autocomplete="off">
+              </mt-input-container>
+    
+            </div>
+
+            <div class="col-sm-3 col-xs-6">
+                <mt-input-container errorMessage="E-mail invalido" label="Confimação do E-mail">
+                  <input type="text" class="form-control" formControlName="emailConfirmation"  placeholder="Confimação do E-mail" 
+                     autocomplete="off">
                 </mt-input-container>
+      
               </div>
-              <div class="col-sm-3 col-xs-6">
-                <mt-input-container errorMessage="Campo obrigatório e somente números" label="Número">
-                    <input type="text" class="form-control" name="number" ngModel placeholder="Número" pattern="^[0-9]*$" required autocomplete="off">
-                </mt-input-container>
-                 
-              </div>
-              <div class="col-sm-3 col-xs-6">
-                <mt-input-container>
-                  <input type="text" class="form-control" name="optionalAddress" ngModel placeholder="Complemento">
-                </mt-input-container>
-                
+      </div>
 
-              </div>
-              <!-- /.col -->
-            </div>
-            <!-- /.row -->
+      <div class="row">
+        <div class="col-xs-12">
+          <p class="lead">Endereço de Entrega:</p>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+          <mt-input-container errorMessage="Campo obrigatório e com 5 caracteres" label="Endereço">
+            <input formControlName="address" class="form-control"  autocomplete="off"
+              placeholder="Endereço">
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="Campo obrigatório e somente números" label="Número">
+            <input type="text" class="form-control" formControlName="number"  placeholder="Número" 
+               autocomplete="off">
+          </mt-input-container>
 
-            <!-- Table row -->
-            <div class="row">
-              <div class="col-xs-12">
-                <p class="lead">Itens do Pedido:</p>
-              </div>
-              
-              <mt-order-items [items]="cartItems()"
-              (increaseQty)="increaseQty($event)"
-              (decreaseQty)="decreaseQty($event)"
-              (remove)="remove($event)"></mt-order-items>
-              <!-- /.col -->
-            </div>
-            <!-- /.row -->
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container>
+            <input type="text" class="form-control" formControlName="optionalAddress"  placeholder="Complemento">
+          </mt-input-container>
 
-            <div class="row">
-              <!-- accepted payments column -->
-              <div class="col-sm-6 col-xs-12">
-                <p class="lead">Formas de Pagamento:</p>
 
-                  <div class="form-group">
-                     
-                    <mt-radio [options]="paymentOptions" name="paymentOption" ngModel required></mt-radio>
+        </div>
+        <!-- /.col -->
+      </div>
+      <!-- /.row -->
 
-                  </div>
+      <!-- Table row -->
+      <div class="row">
+        <div class="col-xs-12">
+          <p class="lead">Itens do Pedido:</p>
+        </div>
 
-              </div>
-              <!-- /.col -->
-              <div class="col-sm-6 col-xs-12">
-                <p class="lead">Frete e Total:</p>
+        <mt-order-items [items]="cartItems()" (increaseQty)="increaseQty($event)" (decreaseQty)="decreaseQty($event)"
+          (remove)="remove($event)"></mt-order-items>
+        <!-- /.col -->
+      </div>
+      <!-- /.row -->
 
-               <mt-delivery-costs 
-               [delivery]="delivery"
-               [itemsValue]="itemsValue()"></mt-delivery-costs>
-              </div>
-              <!-- /.col -->
-            </div>
+      <div class="row">
+        <!-- accepted payments column -->
+        <div class="col-sm-6 col-xs-12">
+          <p class="lead">Formas de Pagamento:</p>
 
-          </form>
+          <div class="form-group">
 
-          <div class="row">
-            <div class="col-xs-12">
-              <button (click)="checkOrder(form.value)" class="btn btn-success pull-right"
-                [disabled]="!form.valid || cartItems().length === 0">
-                <i class="fa fa-credit-card"></i> Concluir Pedido
-              </button>
-            </div>
+            <mt-radio [options]="paymentOptions" formControlName="paymentOptions" ></mt-radio>
+
           </div>
 
-      </section>
+        </div>
+        <!-- /.col -->
+        <div class="col-sm-6 col-xs-12">
+          <p class="lead">Frete e Total:</p>
+
+          <mt-delivery-costs [delivery]="delivery" [itemsValue]="itemsValue()"></mt-delivery-costs>
+        </div>
+        <!-- /.col -->
+      </div>
+
+    </form>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <button (click)="checkOrder(orderForm.value)" class="btn btn-success pull-right" [disabled]="!orderForm.valid || cartItems().length === 0">
+          <i class="fa fa-credit-card"></i> Concluir Pedido
+        </button>
+      </div>
+    </div>
+
   </section>
-  <!-- FIM DO CONTEUDO-->
+</section>
+<!-- FIM DO CONTEUDO-->
