--- a/src/app/restaurants/restaurant/restaurant.component.html
+++ b/src/app/restaurants/restaurant/restaurant.component.html
@@ -1,8 +1,8 @@
 <a [routerLink]="['/restaurants', restaurant.id]">
-  <div class="place-info-box">
+  <div class="place-info-box" [@restaurantAppeared]="restauranteState">
     <span class="place-info-box-icon"><img [src]="restaurant.imagePath" /></span>
 
-    <div class="place-info-box-content">
+    <div class="place-info-box-content" >
       <span class="place-info-box-text">{{restaurant.name}}</span>
       <span class="place-info-box-star"><i class="fa fa-star"></i> {{restaurant.rating}}</span>
       <span class="place-info-box-detail">{{restaurant.category}}</span>
